--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,17 @@
 <ion-app>
-    <ion-router-outlet animated="true"></ion-router-outlet>
+    <!-- HEADER COMUNE A TUTTE LE PAGINE -->
+    <div class="main-header" style="z-index: 1000">
+        <div class="logo"></div>
+        <div class="header-bar">
+            <img src="/assets/img/readvice-logo@2x.png" class="title">
+        </div>
+        <div class="tools">
+            <button class="hints alerts" (click)="logout()"><span>10</span></button>
+            <button class="hints tasks"><span>10</span></button>
+            <button class="hints alerts"><span>10</span></button>
+            <button class="user" (click)="goToProfiloUtente()">{{getUtenteEmail()}}</button>
+        </div>
+    </div>
+    <!-- FINE HEADER COMUNE -->
+    <ion-router-outlet animated="false"></ion-router-outlet>
 </ion-app>
