--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -1,29 +1,3 @@
-<!--<ion-header no-border no-padding no-margin>
-  <ion-toolbar color="bar" no-padding no-margin>
-    <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
-    <ion-title text-left class="header-bar">
-      <img src="/assets/img/readvice-logo@2x.png" class="title">
-    </ion-title>
-    <ion-buttons slot="end" class="tools">
-        <a href="#" class="hints tasks"><span>10</span></a>
-        <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
-    </ion-buttons>
-</ion-toolbar>
-</ion-header>-->
-
-<div class="main-header">
-    <div class="logo"></div>
-    <div class="header-bar">
-        <img src="/assets/img/readvice-logo@2x.png" class="title">
-    </div>
-    <div class="tools">
-        <a href="#" class="hints tasks"><span>10</span></a>
-        <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="profilo-utente" class="user" (click)="goToProfiloUtente()">{{getUtenteEmail()}}</a>
-    </div>
-</div>
-
 <div class="main-body body">
     <div class="content-area">
         <div class="tool-area">
@@ -115,7 +89,7 @@
         </div>
         <div class="list">
             <ul class="lista-immobile">
-                <li class="immobile" *ngFor="let immobileLista of immobiliCliente"
+                <li class="immobile" *ngFor="let immobileLista of sessionService.getImmobiliCliente()"
                     (click)="apriSchedaImmobile(immobileLista.proprieta_id)">
                     <div class="indirizzo">{{immobileLista.indirizzo}},
                         {{immobileLista.civico}}<br>{{immobileLista.cap}} {{immobileLista.citta}}
@@ -142,11 +116,6 @@
             <div class="row">
                 <div class="cell">
                     <button class="button add" (click)="goToWizard()">immobile</button>
-                </div>
-            </div>
-            <div class="row">
-                <div class="cell">
-                    <button class="button add" (click)="svuotaCache()">svuota</button>
                 </div>
             </div>
         </div>
