--- a/src/app/pages/patrimonio/patrimonio.page.html
+++ b/src/app/pages/patrimonio/patrimonio.page.html
@@ -1,15 +1,3 @@
-<div class="main-header">
-    <div class="logo"></div>
-    <div class="header-bar">
-        <img src="/assets/img/readvice-logo@2x.png" class="title">
-    </div>
-    <div class="tools">
-        <a href="#" class="hints tasks"><span>10</span></a>
-        <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">{{getUtenteEmail()}}</a>
-    </div>
-</div>
-
 <div class="main-body body">
     <div class="content-area">
         <div class="tool-area">
@@ -109,7 +97,7 @@
                         ({{immobileLista.provincia}})</div>
                     <div class="tipologia table">
                         <div class="row">
-                            <div class="cell abitazione">
+                            <div [ngClass]="getIconaClasseImmobileCell(immobileLista.codice_tipologia)">
                             </div>
                         </div>
                     </div>
