--- a/src/app/pages/profilo-utente/profilo-utente.page.html
+++ b/src/app/pages/profilo-utente/profilo-utente.page.html
@@ -1,15 +1,3 @@
-<div class="main-header">
-    <div class="logo"></div>
-    <div class="header-bar">
-        <img src="/assets/img/readvice-logo@2x.png" class="title">
-    </div>
-    <div class="tools">
-        <a href="#" class="hints tasks"><span>10</span></a>
-        <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
-    </div>
-</div>
-
 <div class="main-body  body-no-right-menu wizard">
     <div class="content-area">
         <div class="tool-area">
@@ -31,7 +19,7 @@
                         <div class="scheda-row">
                             <div class="item tipologia cliente"></div>
                             <div class="item indirizzo">
-                                alessandro.tamborini@readvice.it
+                                {{getUtenteEmail()}}
                             </div>
                         </div>
                     </div>
