--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -1,15 +1,3 @@
-<div class="main-header">
-    <div class="logo"></div>
-    <div class="header-bar">
-        <img src="/assets/img/readvice-logo@2x.png" class="title">
-    </div>
-    <div class="tools">
-        <a href="#" class="hints tasks"><span>10</span></a>
-        <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">{{getUtenteEmail()}}</a>
-    </div>
-</div>
-
 <div class="main-body body">
     <div class="content-area">
         <div class="tool-area">
@@ -21,8 +9,8 @@
                             {{sessionService.getCliente().nome + ' ' + sessionService.getCliente().cognome}} - Immobile
                         </h3>
                         <div style="float: right">
-                            <a href="#" class="button view">Catastali</a>
-                            <a [routerLink]="" class="button edit" (click)="goToWizard()">Modifica</a></div>
+                            <button class="button view" (click)="goToCatastali()">Catastali</button>
+                            <button class="button edit" (click)="goToWizard()">Modifica</button></div>
                     </div>
                 </div>
             </div>
@@ -117,7 +105,7 @@
                     <div class="quota table">
                         <div class="row">
                             <div class="cell">
-                                {{immobileLista.quota}}<small>%</small>
+                                27<small>%</small>
                             </div>
                         </div>
                     </div>
@@ -127,7 +115,7 @@
         <div class="footer table">
             <div class="row">
                 <div class="cell">
-                    <a hef="#" class="button add">immobile</a>
+                    <button class="button add" (click)="goToWizard()">immobile</button>
                 </div>
             </div>
         </div>
