--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,6 +1,6 @@
 <ion-app>
     <!-- HEADER COMUNE A TUTTE LE PAGINE -->
-    <div class="main-header" style="z-index: 1000">
+    <div class="main-header" style="z-index: 1000" *ngIf="!isLoginPage()">
         <div class="logo"></div>
         <div class="header-bar">
             <img src="/assets/img/readvice-logo@2x.png" class="title">
