Modificate alcune obbligartorietà dei campi dei modelli, modifiche al wizard

--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -115,7 +115,7 @@
         <div class="footer table">
             <div class="row">
                 <div class="cell">
-                    <button class="button add" (click)="goToWizard()">immobile</button>
+                    <button class="button add" (click)="goToWizardNew()">immobile</button>
                 </div>
             </div>
         </div>
