--- a/src/app/pages/wizard/wizard.page.html
+++ b/src/app/pages/wizard/wizard.page.html
@@ -320,7 +320,8 @@
                                         <div class="form-item single">
                                             <label>Importo lordo mensile</label>
                                             <div class="type">
-                                                <input type="text" placeholder="" digitsonly numericType="decimal"
+                                                <input type="text" name="importo_mensile" ngDefaultControl
+                                                    placeholder="" digitsonly numericType="decimal"
                                                     [(ngModel)]="immobile.affitto_dettaglio.importo_mensile"><span>&euro;</span>
                                             </div>
                                         </div>
