--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -10,7 +10,10 @@
                         </h3>
                         <div style="float: right">
                             <button class="button view" (click)="goToCatastali()">Catastali</button>
-                            <button class="button edit" (click)="goToWizardEdit()">Modifica</button></div>
+                            <button class="button edit" (click)="goToWizardEdit()">Modifica</button>
+                            <button class="button" (click)="deleteImmobile()">Cancella</button>
+                        </div>
+
                     </div>
                 </div>
             </div>
